fix: add word wrap to prevent long links from breaking page (#27)

--- a/themes/waycrate/assets/css/main.css
+++ b/themes/waycrate/assets/css/main.css
@@ -773,6 +773,10 @@ time:is(.dark *) {
   opacity: 0;
 }
 
+main, p {
+  word-wrap: break-word;
+}
+
 .btn-dark {
   cursor: pointer;
 }
@@ -835,6 +839,10 @@ time:is(.dark *) {
   top: 1.75rem;
 }
 
+.col-span-3 {
+  grid-column: span 3 / span 3;
+}
+
 .ml-4 {
   margin-left: 1rem;
 }
@@ -891,10 +899,6 @@ time:is(.dark *) {
   min-width: 0px;
 }
 
-.max-w-2xl {
-  max-width: 42rem;
-}
-
 .-translate-x-80 {
   --tw-translate-x: -20rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -906,6 +910,10 @@ time:is(.dark *) {
 
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.grid-cols-6 {
+  grid-template-columns: repeat(6, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -938,10 +946,6 @@ time:is(.dark *) {
 
 .overflow-visible {
   overflow: visible;
-}
-
-.overflow-x-hidden {
-  overflow-x: hidden;
 }
 
 .rounded-full {
@@ -1045,6 +1049,10 @@ time:is(.dark *) {
     grid-column: span 2 / span 2;
   }
 
+  .md\:col-span-1 {
+    grid-column: span 1 / span 1;
+  }
+
   .md\:my-0 {
     margin-top: 0px;
     margin-bottom: 0px;
@@ -1066,6 +1074,10 @@ time:is(.dark *) {
     width: 100%;
   }
 
+  .md\:max-w-2xl {
+    max-width: 42rem;
+  }
+
   .md\:translate-x-0 {
     --tw-translate-x: 0px;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1085,10 +1097,6 @@ time:is(.dark *) {
 
   .md\:justify-start {
     justify-content: flex-start;
-  }
-
-  .md\:justify-center {
-    justify-content: center;
   }
 
   .md\:p-0 {
